--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,10 @@ services:
     env: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./build
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: NODE_VERSION
         value: 18.17.0 
